Updated some code to fix bugs in IE 8 and 7. Backend is unusable on IE 7.

--- a/dev/public/css/admin_style.css
+++ b/dev/public/css/admin_style.css
@@ -6,6 +6,8 @@ body{
     font-size: 14px;
 }
 
+iframe { border: 0 !important; }
+
 a{
 	color: black;
 }
