--- a/dev/public/css/screen.css
+++ b/dev/public/css/screen.css
@@ -68,6 +68,7 @@ h1{
 	position: absolute;
 	width: 200px;
 	border: 1px solid #444;
+    background-color: white;
 	background: rgba(255, 255, 255, 0.8);
 	z-index: 1000;
 }
